app/assets/scss/3-modules/_top-header.scss
/*
  ----------------
  Top Header
  ----------------
*/

header {
  .top__header {
    position: relative;
    background-color: $white-color;
    box-shadow: 0px 3px 6px $gray-color-6;
    .header__logo {
      width: 250px;
      display: flex;
      align-items: center;
      margin-left: 46px;
      @media (min-width: 1350px) {
        width: 350px;
      }
      @media #{$sp} {
        width: 200px;
        margin-left: 20px;
      }
    }
    .nav__list {
      &__item {
        margin-top: 17px;
        &__button {
          a {
            display: inline-block;
            font-weight: 500;
            color: $white-color;
            padding: 15px 20px;
            background: $gradient-bg-2;
            border-radius: 3px;
            line-height: initial;
            transition: all 0.3s;
            border: 1px solid $black-color;
            &:hover {
              opacity: 1;
              color: $black_color;
              background: $white-color;
              border: 1px solid $black-color;
            }
          }
        }
        ul {
          &:first-child {
            margin-bottom: 26px;
          }
          &:last-child {
            a {
              padding: 10px 0;
              position: relative;
              font-weight: 500;
              &::before {
                content: "";
                width: 0%;
                height: 1px;
                background-color: #333;
                display: block;
                position: absolute;
                bottom: 0;
                left: 50%;
                transform: translateX(-50%);
                transition: all 0.3s linear;
              }
              &:hover {
                opacity: 1;
                &::before {
                  width: 100%;
                }
              }
            }
          }
        }
      }
      &__button {
        a {
          display: flex;
          align-items: center;
          color: white;
          background: $gradient-bg;
          height: 100%;
          padding: 0px 26px;
          vertical-align: middle;
          font-weight: 700;
          transition: all 0.3s;
          &:hover {
            opacity: 1;
            background: $gradient-bg-reverse;
          }
        }
      }
    }
    .nav__item__dropdown {
      display: flex;
      align-items: center;
      svg {
        margin-left: 5px;
      }
      &__search,
      &__support {
        &.open {
          svg {
            transform: rotate(180deg);
          }
        }
      }
    }
    @media #{$sp} {
      justify-content: space-between;
    }
  }
  .nav__dropdown {
    &__list__search {
      width: 100%;
      background-color: $white-color;
      display: none;
      &.open {
        display: flex;
      }

      @media #{$sp} {
        height: 100vh;
        position: absolute;
        top: 50px;
        left: 0;
      }
    }
    &__list__support {
      width: 100%;
      background-color: $white-color;
      display: none;
      &.open {
        display: flex;
      }

      @media #{$sp} {
        height: 100vh;
        position: absolute;
        top: 50px;
        left: 10px;
      }
    }
    &__search {
      width: 33%;
      position: relative;
      background-color: rgba(0, 117, 140, 0.1);
      &__container {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        text-align: center;
      }
      &__title {
        color: $blue-color-1;
        font-weight: bold;
        font-size: 22px;
        margin-bottom: 20px;
      }
      .bondi_blue_outline_btn {
        max-width: 200px;
        padding: 12px 23px;
        color: $blue-color;
        font-size: 16px;
        font-weight: lighter;
        white-space: nowrap;

        &::before {
          right: 12px;
          border-width: 2px;
        }
      }
    }
    &__list {
      display: flex;
      width: 100%;
      padding: 50px 60px 60px 60px;
      justify-content: space-between;
      gap: 50px;

      @media #{$sp} {
        display: block;
        padding: 20px 30px 30px 20px;
      }

      &__first {
        width: 50%;

        @media #{$sp} {
          width: 100%;
        }

        li {
          &:first-child {
            padding: 0 0 10px;
          }
        }
      }
      &__secondary {
        width: 50%;

        @media #{$sp} {
          width: 100%;
        }

        li {
          &:first-child {
            padding: 0 0 10px;
          }
        }
      }
      li {
        padding: 20px 0 10px;
        border-bottom: 1px solid $gray-color-7;
        a,
        div {
          display: flex;
          justify-content: space-between;
          align-items: center;
        }
      }
    }
    &__sp {
      width: 100%;
      overflow: hidden;
      height: 0;
      background-color: $white-color;
      padding: 0 25px;
      transition: 0.3s ease-in-out;
      &.open {
        display: block;
        height: calc(100vh - 50px);
        overflow: auto;
        padding: 50px 25px;
      }
      li {
        width: 100%;
        padding: 20px 0 10px;
        border-bottom: 1px solid $black-color-01;

        a {
          display: flex;
          justify-content: space-between;
          align-items: center;
          span {
            font-size: 14px;
            font-weight: 500;
          }
          svg {
            width: 12px;
            height: 12px;
          }
        }
        &:first-child {
          padding: 0 0 10px;
        }
      }

      .nav__button {

        .flex{
          display: flex;
          justify-content: space-between;
          margin: 20px 0;
        }

        a {
          display: inline-block;
          font-weight: 500;
          color: $white-color;
          padding: 15px 35px;
          background: $gradient-bg-2;
          border-radius: 3px;
          line-height: initial;
          transition: all 0.3s;
          border: 1px solid $black-color;
          &:hover {
            opacity: 1;
            color: $black_color;
            background: $white-color;
            border: 1px solid $black-color;
          }
        }

        .nav__list__button {
          a {
            width: 100%;
            border: none;
            display: inline-block;
            color: white;
            background: $gradient-bg;
            text-align: center;
            font-weight: 700;
            transition: all 0.3s;
            &:hover {
              opacity: 1;
              background: $gradient-bg-reverse;
            }
          }
        }
      }
    }
    &__back {
      margin-top: 30px;
      text-align: center;
    }
  }
}

